--- a/statistical modeling/imputing.ipynb
+++ b/statistical modeling/imputing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "source": [
     "# standard libraries\r\n",
     "import pandas as pd\r\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "source": [
     "#Simple Imputers\r\n",
     "imp_mean = SimpleImputer(strategy=\"mean\")\r\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "source": [
     "# Import and display first five rows of advertising dataset\r\n",
     "df = pd.read_csv('df_0723.csv')\r\n",
@@ -252,14 +252,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 64
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "source": [
     "# specify different types of columns\r\n",
     "id_columns = ['COUNTRY','ID']\r\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "source": [
     "# create a copy for imputation\r\n",
     "imp_df = df.copy()"
@@ -301,20 +301,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "source": [
     "#columns grouped by suggested imputing methods above\r\n",
-    "median_imp =['READING_AVG','GDP_2018']\r\n",
+    "median_imp =['READING_AVG','GDP_2018', 'P_Enrollment_Totals']\r\n",
     "knn5_imp = ['LS_completion','LS_completion_male','LS_completion_female','LS_ta_presence', 'P_ta_presence','LS_guard_presence', 'P_sped_ta_presence','LS_sped_ta_presence','salary_per_instruction_hr']\r\n",
     "knn4_imp = ['P_national_assessment','LS_national_assessment','P_annual_exp','LS_annual_exp']\r\n",
-    "knn3_imp = ['expect_degree','test_anxiety','study_habits','expect_good_grades','home_comp_internet','home_desk_quiet','home_schoolbooks','teacher_sent _societal_contribution','teacher_need_multicultural_pd','teacher_PD_12M_Value','principal_PD_12M_Value']"
+    "knn3_imp = ['expect_degree','test_anxiety','study_habits','expect_good_grades','home_comp_internet','home_desk_quiet','home_schoolbooks','teacher_sent_societal_contribution','teacher_need_multicultural_pd','teacher_PD_12M_Value','principal_PD_12M_Value']"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "source": [
     "#running median imputation and adding to new df\r\n",
     "\r\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "source": [
     "#based on formula 1 columns, impute kn 5 columns\r\n",
     "formula1 = outcome_columns + control_columns+ knn5_imp\r\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "source": [
     "#based on formula 2 columns, impute kn 4 columns\r\n",
     "formula2 = outcome_columns + control_columns+ knn5_imp + knn4_imp\r\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "source": [
     "#based on formula 3 columns, impute kn 3 columns\r\n",
     "formula3 = outcome_columns + control_columns+ knn5_imp + knn4_imp + knn3_imp\r\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "source": [
     "df.describe()"
    ],
@@ -409,15 +409,15 @@
        "75%           2.795060e+06      98.876667           99.283333   \n",
        "max           2.942575e+07     100.000000          100.000000   \n",
        "\n",
-       "       LS_completion_female  teacher_sent _societal_contribution  \\\n",
-       "count             57.000000                            39.000000   \n",
-       "mean              90.971811                            89.958974   \n",
-       "std               15.570077                             7.326725   \n",
-       "min                0.000000                            65.600000   \n",
-       "25%               90.016667                            86.150000   \n",
-       "50%               96.480000                            92.300000   \n",
-       "75%               98.980000                            95.700000   \n",
-       "max              100.000000                            98.800000   \n",
+       "       LS_completion_female  teacher_sent_societal_contribution  \\\n",
+       "count             57.000000                           39.000000   \n",
+       "mean              90.971811                           89.958974   \n",
+       "std               15.570077                            7.326725   \n",
+       "min                0.000000                           65.600000   \n",
+       "25%               90.016667                           86.150000   \n",
+       "50%               96.480000                           92.300000   \n",
+       "75%               98.980000                           95.700000   \n",
+       "max              100.000000                           98.800000   \n",
        "\n",
        "       teacher_need_multicultural_pd  ...  LS_national_assessment  \\\n",
        "count                      39.000000  ...               50.000000   \n",
@@ -488,7 +488,7 @@
        "      <th>LS_completion</th>\n",
        "      <th>LS_completion_male</th>\n",
        "      <th>LS_completion_female</th>\n",
-       "      <th>teacher_sent _societal_contribution</th>\n",
+       "      <th>teacher_sent_societal_contribution</th>\n",
        "      <th>teacher_need_multicultural_pd</th>\n",
        "      <th>...</th>\n",
        "      <th>LS_national_assessment</th>\n",
@@ -703,14 +703,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "source": [
     "imp_df.describe()"
    ],
@@ -730,24 +730,24 @@
        "max     555.000000  591.000000   590.000000  130475.069000   \n",
        "\n",
        "       P_Enrollment_Totals  LS_completion  LS_completion_male  \\\n",
-       "count         6.700000e+01      74.000000           74.000000   \n",
-       "mean          2.672815e+06      92.732094           93.837486   \n",
-       "std           5.406551e+06      13.245104           12.558288   \n",
+       "count         7.400000e+01      74.000000           74.000000   \n",
+       "mean          2.468665e+06      92.732094           93.837486   \n",
+       "std           5.179982e+06      13.245104           12.558288   \n",
        "min           2.653200e+04       0.000000            0.000000   \n",
-       "25%           2.001585e+05      92.594701           92.865833   \n",
+       "25%           2.408485e+05      92.594701           92.865833   \n",
        "50%           5.146640e+05      96.960162           97.763034   \n",
-       "75%           2.795060e+06      98.720000           99.080251   \n",
+       "75%           2.374625e+06      98.720000           99.080251   \n",
        "max           2.942575e+07     100.000000          100.000000   \n",
        "\n",
-       "       LS_completion_female  teacher_sent _societal_contribution  \\\n",
-       "count             74.000000                            74.000000   \n",
-       "mean              91.691703                            91.903585   \n",
-       "std               14.097315                             6.230617   \n",
-       "min                0.000000                            65.600000   \n",
-       "25%               92.157681                            89.055368   \n",
-       "50%               96.433333                            92.867824   \n",
-       "75%               98.754399                            97.105882   \n",
-       "max              100.000000                            98.800000   \n",
+       "       LS_completion_female  teacher_sent_societal_contribution  \\\n",
+       "count             74.000000                           74.000000   \n",
+       "mean              91.691703                           91.903585   \n",
+       "std               14.097315                            6.230617   \n",
+       "min                0.000000                           65.600000   \n",
+       "25%               92.157681                           89.055368   \n",
+       "50%               96.433333                           92.867824   \n",
+       "75%               98.754399                           97.105882   \n",
+       "max              100.000000                           98.800000   \n",
        "\n",
        "       teacher_need_multicultural_pd  ...  LS_national_assessment  \\\n",
        "count                      74.000000  ...               74.000000   \n",
@@ -818,7 +818,7 @@
        "      <th>LS_completion</th>\n",
        "      <th>LS_completion_male</th>\n",
        "      <th>LS_completion_female</th>\n",
-       "      <th>teacher_sent _societal_contribution</th>\n",
+       "      <th>teacher_sent_societal_contribution</th>\n",
        "      <th>teacher_need_multicultural_pd</th>\n",
        "      <th>...</th>\n",
        "      <th>LS_national_assessment</th>\n",
@@ -840,7 +840,7 @@
        "      <td>74.000000</td>\n",
        "      <td>74.000000</td>\n",
        "      <td>74.000000</td>\n",
-       "      <td>6.700000e+01</td>\n",
+       "      <td>7.400000e+01</td>\n",
        "      <td>74.000000</td>\n",
        "      <td>74.000000</td>\n",
        "      <td>74.000000</td>\n",
@@ -864,7 +864,7 @@
        "      <td>457.459459</td>\n",
        "      <td>456.945946</td>\n",
        "      <td>38068.780919</td>\n",
-       "      <td>2.672815e+06</td>\n",
+       "      <td>2.468665e+06</td>\n",
        "      <td>92.732094</td>\n",
        "      <td>93.837486</td>\n",
        "      <td>91.691703</td>\n",
@@ -888,7 +888,7 @@
        "      <td>57.086138</td>\n",
        "      <td>52.042894</td>\n",
        "      <td>25678.350464</td>\n",
-       "      <td>5.406551e+06</td>\n",
+       "      <td>5.179982e+06</td>\n",
        "      <td>13.245104</td>\n",
        "      <td>12.558288</td>\n",
        "      <td>14.097315</td>\n",
@@ -936,7 +936,7 @@
        "      <td>414.750000</td>\n",
        "      <td>417.500000</td>\n",
        "      <td>19151.608750</td>\n",
-       "      <td>2.001585e+05</td>\n",
+       "      <td>2.408485e+05</td>\n",
        "      <td>92.594701</td>\n",
        "      <td>92.865833</td>\n",
        "      <td>92.157681</td>\n",
@@ -984,7 +984,7 @@
        "      <td>499.750000</td>\n",
        "      <td>495.750000</td>\n",
        "      <td>51503.195250</td>\n",
-       "      <td>2.795060e+06</td>\n",
+       "      <td>2.374625e+06</td>\n",
        "      <td>98.720000</td>\n",
        "      <td>99.080251</td>\n",
        "      <td>98.754399</td>\n",
@@ -1033,17 +1033,24 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "source": [
     "imp_df.to_csv('imputed.csv', index = False)"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
